# weekend-planner

./: .gitignore  README.md
backend/: app.py  chat_service.py  config.py  pyproject.toml
backend/agent/: __init__.py  agent.py  context.py  graph.py  nodes.py  state.py
backend/db/: __init__.py  database.py  schema.sql  seed.py
backend/services/: event_service.py  guide_service.py  intent_parser.py  itinerary_service.py  poi_service.py  review_service.py  route_optimizer.py
backend/tests/: test_core.py
backend/tools/: __init__.py  amap.py  tavily.py  xhs_ugc.py
docs/: agent-design.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: Canvas.tsx  Chat.tsx  MarkdownMessage.tsx
frontend/lib/: api.ts
