[project]
name = "roam-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.2",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
